--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="navbar">
+        <div class="nav-logo border">
+            <div class="logo">
+            </div>
+        </div>
+        <div class="nav-address border">
+            <p style="color: #cccccc; font-size: 0.85rem; margin-left: 15px;">Deliver to</p>
+            <div class="add-icon">
+                <i class="fa-solid fa-location-dot"></i>
+                <p style="font-size: 1rem; margin-left: 3px;">India</p>
+            </div>
+        </div>
+        <div class="nav-search">
+            <select>
+                <option>All</option>
+            </select class="search-select">
+            <input placeholder="Search Amazon" class="search-input">
+            <div class="search-icon">
+                <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
