--- a/index.html
+++ b/index.html
@@ -21,13 +21,21 @@
             </div>
         </div>
         <div class="nav-search">
-            <select>
+            <select class="search-select">
                 <option>All</option>
-            </select class="search-select">
+            </select>
             <input placeholder="Search Amazon" class="search-input">
             <div class="search-icon">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </div>
+        </div>
+        <div class="nav-signin border">
+            <p><span>Hello, sign in</span></p>
+            <p class="nav-second">Accounts & Lists</p>
+        </div>
+        <div class="nav-return border">
+            <p><span>Returns</span></p>
+            <p class="nav-second">& Orders</p>
         </div>
     </div>
 </body>
