completed nav bar

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
             <p><span>Returns</span></p>
             <p class="nav-second">& Orders</p>
         </div>
+        <div class="nav-cart border">
+            <i class="fa-solid fa-cart-shopping"></i>
+            Cart
+        </div>
     </div>
 </body>
 </html>
